# lit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml  testpypi.yml
.lit/: config.json
demo/.lit/refs/heads/: main
docs/: gui-architecture.md  lit-v1-implementation-plan.md  lit-v1-product-design.md  lit-v1-upgrade-notes.md  releasing.md
jakal-flow-logs/: test_runs.jsonl
jakal-flow-logs/block_0001/: block-search-pass-fallback-openai.attempt_1.last_message.txt  block-search-pass-fallback-openai.diagnostics.json  block-search-pass-fallback-openai.events.jsonl  block-search-pass-fallback-openai.prompt.md
logo/: generate_app_icon.py
src/lit/: __init__.py  __main__.py  artifact_store.py  artifacts.py  backend_api.py  checkpoints.py  cli.py  commits.py  config.py  doctor.py  domain.py  export_git.py  index.py  layout.py  lineage.py  merge_ops.py  migrations.py  rebase_ops.py  refs.py  repository.py  state.py  storage.py  transactions.py  trees.py  verification.py  workflows.py  working_tree.py
src/lit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/lit/commands/: __init__.py  add.py  artifact.py  branch.py  checkout.py  checkpoint.py  commit.py  common.py  diff.py  doctor.py  export.py  gc.py  init.py  lineage.py  log.py  merge.py  rebase.py  restore.py  rollback.py  status.py  verify.py
src/lit_gui/: __init__.py  app.py  contracts.py  session.py
src/lit_gui/backend/: __init__.py  snapshot.py
src/lit_gui/persistence/: __init__.py  recent_repositories.py
src/lit_gui/shell/: __init__.py  window.py
src/lit_gui/views/: __init__.py  _placeholders.py
src/lit_gui/views/branches/: __init__.py  view.py
src/lit_gui/views/changes/: __init__.py  view.py
src/lit_gui/views/files/: __init__.py  view.py
src/lit_gui/views/history/: __init__.py  view.py
src/lit_gui/views/home/: __init__.py  view.py
src/lit_gui/views/operations/: __init__.py  panels.py
src/lit_gui/widgets/: __init__.py
src/lit_gui/widgets/shared/: __init__.py  detail_slots.py  diff_panel.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_backend_integration.py  test_bootstrap.py  test_cli_end_to_end.py  test_docs.py  test_git_export.py  test_lineage.py  test_lit_gui_bootstrap.py  test_performance_smoke.py  test_verification.py  test_workflows.py  test_workspace_lineage.py
tests/gui/: conftest.py  test_gui_bootstrap.py
tests/gui/backend/: test_session.py
tests/gui/views/: test_branches_operations.py  test_changes_history.py  test_home_files.py  test_release_surfaces.py
tests/integration/: test_backend_integration.py  test_bootstrap.py  test_checkpoints.py  test_cli_end_to_end.py  test_git_export.py  test_lineage.py  test_repository_resilience.py  test_shared_workflow_paths.py  test_workflows.py
tests/unit/: test_contract_models.py  test_docs.py  test_entrypoints.py  test_packaging.py  test_release_assets.py
website/: index.html  styles.css
