[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lit"
version = "1.0.0"
description = "Local execution VCS for autonomous coding workflows on one machine."
requires-python = ">=3.12"
dependencies = []

# Install contract:
# - Preferred CLI: `lit` (console script on PATH after install)
# - No-PATH fallback: `python -m lit` (module entrypoint)
# - Optional GUI: `lit-gui` (requires the `gui` extra: `pip install "lit[gui]"` or `pip install -e ".[gui]"`)
[project.optional-dependencies]
gui = ["PySide6>=6.8"]

[project.scripts]
lit = "lit.__main__:main"
lit-gui = "lit.__main__:gui_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
