[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-lit"
version = "1.0.0"
description = "Local execution VCS for autonomous coding workflows on one machine."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "local", "offline-first", "vcs", "version-control", "agent-workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Ahnd6474/lit"
Documentation = "https://github.com/Ahnd6474/lit/blob/main/README.md"
Repository = "https://github.com/Ahnd6474/lit"
Issues = "https://github.com/Ahnd6474/lit/issues"
Changelog = "https://github.com/Ahnd6474/lit/blob/main/CHANGELOG.md"

# Install contract:
# - Preferred CLI: `lit` (console script on PATH after install)
# - No-PATH fallback: `python -m lit` (module entrypoint)
# - Published distribution: `jakal-lit`
# - Optional GUI: `lit-gui` (requires the `gui` extra:
#   `pip install "jakal-lit[gui]"` or `pip install -e ".[gui]"`)
[project.optional-dependencies]
gui = ["PySide6>=6.8"]
dev = ["build>=1.2", "pytest>=8", "tox>=4.24", "twine>=5.1"]

[project.scripts]
lit = "lit.__main__:main"
lit-gui = "lit.__main__:gui_main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
